# alpha-transformer

./: .gitignore  environment.yml  inference_testing.ipynb  pyproject.toml  requirements.txt  setup.py  train.py  trainer.py  🚀 TransformerPortfolioProject.docx
alpha_transformer/: inference_testing.ipynb  train.py  trainer.py
alpha_transformer/alpha_transformer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
alpha_transformer/analysis/: compare_results.py
alpha_transformer/analysis/en_fr_1/: bleu_scores_summary.csv
alpha_transformer/flask_server/: serve_translate_api.py
alpha_transformer/scripts/: batch_run.sh  debug_train.sh  infer.py  restart_training.py  save_sentences_for_sentencepiece.py  test_imports.py  train_spm.py
alpha_transformer/transformer/: label_smoothing_loss.py  transformer.py  warm_up_inverse_scheduler.py
alpha_transformer/utils/: bleu_scorer.py  early_stopping.py  training_plotter.py
checkpoints/test_checkpoints_small/: train_log.txt
data/: spm.model  spm.vocab  translation_data.py  translation_data_DEPRECATED.py
scripts/: save_sentences_for_sentencepiece.py  train_spm.py
src/alpha_transformer/: train.py  trainer.py
transformer/: transformer.py
transformer/core/: input_embedding.py  multihead_attention.py  positional_encoding.py  singlehead_attention.py
transformer/decoder/: __init__.py  decoder_block.py  decoder_model.py  transformer_decoder.py
transformer/encoder/: encoder_block.py  encoder_model.py  transformer_encoder.py
utils/: bleu_scorer.py  early_stopping.py  training_plotter.py
(+32 files in other folders)
